--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -84,6 +84,8 @@ set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)  '
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
+# Vim stuff
+set -g default-terminal "xterm-256color"
 
 # PLUGINS (Prefix + I to isntall them)
 # TPM Magic Smoke
