Make update with more nvim updates after working with it for a bit

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,11 +1,11 @@
-# Set the binding key / prefix to Ctrl+a
-set -g prefix C-a
-
-# Remove old keybind
-unbind C-b
-
-# Send Ctrl+a to applications by pressing it twice
-bind C-a send-prefix
+# # Set the binding key / prefix to Ctrl+a
+# set -g prefix C-a
+# 
+# # Remove old keybind
+# unbind C-b
+# 
+# # Send Ctrl+a to applications by pressing it twice
+# bind C-a send-prefix
 
 # set active window color
 # set -g window-status-current-style bg=red,fg=white
